--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "mocha test",
-    "start": "bower install && browserify lib/client.js -o static/client.js && bin/server"
+    "test": "mocha test test/client",
+    "start-old": "bower install && browserify lib/client.js -o static/client.js && bin/server",
+    "start": "bin/server"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,14 @@
   },
   "homepage": "https://github.com/nomilous/gravitator#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "happner-2": "^2.11.0",
+    "happner-client": "^1.2.3",
+    "serve-static": "^1.12.1"
   },
   "devDependencies": {
     "bower": "^1.8.0",
-    "browserify": "^14.3.0",
     "mocha": "^3.2.0",
-    "three": "*"
+    "three": "0.84.0"
   }
 }
